deploy: 85816afce7157e5560ccf011245f75671d7d38cd

--- a/tutorials/xyz.ipynb
+++ b/tutorials/xyz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d028434",
+   "id": "43e9c4fc",
    "metadata": {},
    "source": [
     "# Exporting and Importing\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79bd9680",
+   "id": "b64ccc2b",
    "metadata": {},
    "source": [
     "GRANAD lets you save orbitals to xyz files. It also offers rudimentary support for loading orbitals from xyz files. For demonstration, we will create a triangular flake, print its xyz representation, save it to file and reload it."
@@ -19,13 +19,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b13d2d53",
+   "id": "3b232ec2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:32:47.023137Z",
-     "iopub.status.busy": "2024-06-13T11:32:47.022944Z",
-     "iopub.status.idle": "2024-06-13T11:32:51.289629Z",
-     "shell.execute_reply": "2024-06-13T11:32:51.289010Z"
+     "iopub.execute_input": "2024-06-13T15:28:35.975222Z",
+     "iopub.status.busy": "2024-06-13T15:28:35.975023Z",
+     "iopub.status.idle": "2024-06-13T15:28:40.285306Z",
+     "shell.execute_reply": "2024-06-13T15:28:40.284568Z"
     }
    },
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa800e0a",
+   "id": "e6c80522",
    "metadata": {},
    "source": [
     "We can look at only the atoms in this file. They are given as a dictionary. The type of atom is the key. The value is all positions where atoms of this type are."
@@ -46,13 +46,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "67da3463",
+   "id": "13adf642",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:32:51.292622Z",
-     "iopub.status.busy": "2024-06-13T11:32:51.292103Z",
-     "iopub.status.idle": "2024-06-13T11:32:51.308898Z",
-     "shell.execute_reply": "2024-06-13T11:32:51.308343Z"
+     "iopub.execute_input": "2024-06-13T15:28:40.288258Z",
+     "iopub.status.busy": "2024-06-13T15:28:40.287799Z",
+     "iopub.status.idle": "2024-06-13T15:28:40.305965Z",
+     "shell.execute_reply": "2024-06-13T15:28:40.305428Z"
     }
    },
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d447d1",
+   "id": "be3fc1ff",
    "metadata": {},
    "source": [
     "If you supply no name to the to_xyz method, it will  return the string"
@@ -79,13 +79,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aa8b0920",
+   "id": "6ae37b5a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:32:51.311198Z",
-     "iopub.status.busy": "2024-06-13T11:32:51.310902Z",
-     "iopub.status.idle": "2024-06-13T11:32:51.317121Z",
-     "shell.execute_reply": "2024-06-13T11:32:51.316635Z"
+     "iopub.execute_input": "2024-06-13T15:28:40.308449Z",
+     "iopub.status.busy": "2024-06-13T15:28:40.308085Z",
+     "iopub.status.idle": "2024-06-13T15:28:40.314462Z",
+     "shell.execute_reply": "2024-06-13T15:28:40.313985Z"
     }
    },
    "outputs": [
@@ -151,22 +151,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e6e2b49",
+   "id": "4a818b9c",
    "metadata": {},
    "source": [
-    "If you want to save this to a file, do"
+    "To save this to a file, do"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9a40b330",
+   "id": "5779f184",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:32:51.319357Z",
-     "iopub.status.busy": "2024-06-13T11:32:51.319003Z",
-     "iopub.status.idle": "2024-06-13T11:32:51.325388Z",
-     "shell.execute_reply": "2024-06-13T11:32:51.324819Z"
+     "iopub.execute_input": "2024-06-13T15:28:40.316810Z",
+     "iopub.status.busy": "2024-06-13T15:28:40.316339Z",
+     "iopub.status.idle": "2024-06-13T15:28:40.322279Z",
+     "shell.execute_reply": "2024-06-13T15:28:40.321672Z"
     }
    },
    "outputs": [],
@@ -176,22 +176,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaa5d925",
+   "id": "53466934",
    "metadata": {},
    "source": [
-    "You can also reload, although this is limited: all atoms in the xyz file get the same group id by default."
+    "Reloading is limited: all atoms in the xyz file get the same group id by default."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b5720ad0",
+   "id": "60d5ac6e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:32:51.327821Z",
-     "iopub.status.busy": "2024-06-13T11:32:51.327481Z",
-     "iopub.status.idle": "2024-06-13T11:32:51.340654Z",
-     "shell.execute_reply": "2024-06-13T11:32:51.340046Z"
+     "iopub.execute_input": "2024-06-13T15:28:40.324482Z",
+     "iopub.status.busy": "2024-06-13T15:28:40.324158Z",
+     "iopub.status.idle": "2024-06-13T15:28:40.337082Z",
+     "shell.execute_reply": "2024-06-13T15:28:40.336526Z"
     }
    },
    "outputs": [],
