deploy: ea63beb9eeb1cb3b4057ab536dfa2255343c0059

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea59433d",
+   "id": "98729705",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78e9a15e",
+   "id": "ecfb6f2c",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6254fda5",
+   "id": "911de88f",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c751ded",
+   "id": "24a052a2",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60d6c1a3",
+   "id": "34d0aa33",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0611c7e",
+   "id": "198589c8",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c8451beb",
+   "id": "80190fd5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:22.750509Z",
-     "iopub.status.busy": "2024-06-13T15:26:22.750057Z",
-     "iopub.status.idle": "2024-06-13T15:26:27.089526Z",
-     "shell.execute_reply": "2024-06-13T15:26:27.088883Z"
+     "iopub.execute_input": "2024-06-15T10:22:20.160004Z",
+     "iopub.status.busy": "2024-06-15T10:22:20.159812Z",
+     "iopub.status.idle": "2024-06-15T10:22:24.325691Z",
+     "shell.execute_reply": "2024-06-15T10:22:24.325076Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd6639e",
+   "id": "0bc1a343",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d93e7022",
+   "id": "a5fd8bc8",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cceb15c7",
+   "id": "b9839a5e",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77475a4c",
+   "id": "c80b1673",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2456fb9",
+   "id": "d6e67bb8",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9931a06d",
+   "id": "8a1e916d",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "839021f6",
+   "id": "f5a65f5e",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e54f2457",
+   "id": "bcde124a",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "265acd9e",
+   "id": "a0334fa4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:27.092209Z",
-     "iopub.status.busy": "2024-06-13T15:26:27.091928Z",
-     "iopub.status.idle": "2024-06-13T15:26:29.065651Z",
-     "shell.execute_reply": "2024-06-13T15:26:29.065105Z"
+     "iopub.execute_input": "2024-06-15T10:22:24.328716Z",
+     "iopub.status.busy": "2024-06-15T10:22:24.328189Z",
+     "iopub.status.idle": "2024-06-15T10:22:26.152675Z",
+     "shell.execute_reply": "2024-06-15T10:22:26.152072Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b846f27",
+   "id": "64888e2d",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dd46439f",
+   "id": "c019cf52",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:29.068209Z",
-     "iopub.status.busy": "2024-06-13T15:26:29.067808Z",
-     "iopub.status.idle": "2024-06-13T15:26:29.071702Z",
-     "shell.execute_reply": "2024-06-13T15:26:29.070981Z"
+     "iopub.execute_input": "2024-06-15T10:22:26.155204Z",
+     "iopub.status.busy": "2024-06-15T10:22:26.154794Z",
+     "iopub.status.idle": "2024-06-15T10:22:26.158672Z",
+     "shell.execute_reply": "2024-06-15T10:22:26.157930Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7c287b5",
+   "id": "6577587e",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61d3c22",
+   "id": "a266049c",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72dc0099",
+   "id": "f9354d51",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8c3aec4",
+   "id": "9eede5d0",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8d4719ab",
+   "id": "04240b26",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:29.073999Z",
-     "iopub.status.busy": "2024-06-13T15:26:29.073802Z",
-     "iopub.status.idle": "2024-06-13T15:26:29.120431Z",
-     "shell.execute_reply": "2024-06-13T15:26:29.119778Z"
+     "iopub.execute_input": "2024-06-15T10:22:26.160929Z",
+     "iopub.status.busy": "2024-06-15T10:22:26.160740Z",
+     "iopub.status.idle": "2024-06-15T10:22:26.204091Z",
+     "shell.execute_reply": "2024-06-15T10:22:26.203521Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "975921e3",
+   "id": "4611d89b",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7fd6c540",
+   "id": "3951ff20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:29.123138Z",
-     "iopub.status.busy": "2024-06-13T15:26:29.122644Z",
-     "iopub.status.idle": "2024-06-13T15:26:29.194000Z",
-     "shell.execute_reply": "2024-06-13T15:26:29.193450Z"
+     "iopub.execute_input": "2024-06-15T10:22:26.206630Z",
+     "iopub.status.busy": "2024-06-15T10:22:26.206291Z",
+     "iopub.status.idle": "2024-06-15T10:22:26.271467Z",
+     "shell.execute_reply": "2024-06-15T10:22:26.270908Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3683052e",
+   "id": "ab7c480f",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4202262d",
+   "id": "121c44e5",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a99d72cf",
+   "id": "943dc20f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:29.196544Z",
-     "iopub.status.busy": "2024-06-13T15:26:29.196161Z",
-     "iopub.status.idle": "2024-06-13T15:26:29.226807Z",
-     "shell.execute_reply": "2024-06-13T15:26:29.226182Z"
+     "iopub.execute_input": "2024-06-15T10:22:26.273966Z",
+     "iopub.status.busy": "2024-06-15T10:22:26.273589Z",
+     "iopub.status.idle": "2024-06-15T10:22:26.302974Z",
+     "shell.execute_reply": "2024-06-15T10:22:26.302397Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ab36ab4",
+   "id": "250ee1bc",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73ca06e7",
+   "id": "c246896e",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71113473",
+   "id": "aac391d1",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4c9f814",
+   "id": "4c7388d2",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc142d8",
+   "id": "eec360a9",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c31a925c",
+   "id": "aefab9cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:29.229430Z",
-     "iopub.status.busy": "2024-06-13T15:26:29.229062Z",
-     "iopub.status.idle": "2024-06-13T15:26:29.233432Z",
-     "shell.execute_reply": "2024-06-13T15:26:29.232843Z"
+     "iopub.execute_input": "2024-06-15T10:22:26.305797Z",
+     "iopub.status.busy": "2024-06-15T10:22:26.305290Z",
+     "iopub.status.idle": "2024-06-15T10:22:26.309786Z",
+     "shell.execute_reply": "2024-06-15T10:22:26.309164Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96171739",
+   "id": "26fabcf0",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4d76b42c",
+   "id": "13574881",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:29.235782Z",
-     "iopub.status.busy": "2024-06-13T15:26:29.235426Z",
-     "iopub.status.idle": "2024-06-13T15:26:29.238408Z",
-     "shell.execute_reply": "2024-06-13T15:26:29.237806Z"
+     "iopub.execute_input": "2024-06-15T10:22:26.312287Z",
+     "iopub.status.busy": "2024-06-15T10:22:26.311931Z",
+     "iopub.status.idle": "2024-06-15T10:22:26.314948Z",
+     "shell.execute_reply": "2024-06-15T10:22:26.314307Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac3a7819",
+   "id": "99bfcea3",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ffecf33e",
+   "id": "7463fc57",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:29.240588Z",
-     "iopub.status.busy": "2024-06-13T15:26:29.240233Z",
-     "iopub.status.idle": "2024-06-13T15:26:31.737103Z",
-     "shell.execute_reply": "2024-06-13T15:26:31.736473Z"
+     "iopub.execute_input": "2024-06-15T10:22:26.317131Z",
+     "iopub.status.busy": "2024-06-15T10:22:26.316798Z",
+     "iopub.status.idle": "2024-06-15T10:22:28.733783Z",
+     "shell.execute_reply": "2024-06-15T10:22:28.733119Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c471dbe",
+   "id": "d1e45d46",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7994bad3",
+   "id": "5e99d597",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f516eb2",
+   "id": "72724c59",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97a1858c",
+   "id": "499c96e7",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fbbf278d",
+   "id": "78ce04f0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:31.739805Z",
-     "iopub.status.busy": "2024-06-13T15:26:31.739431Z",
-     "iopub.status.idle": "2024-06-13T15:26:31.743526Z",
-     "shell.execute_reply": "2024-06-13T15:26:31.743019Z"
+     "iopub.execute_input": "2024-06-15T10:22:28.736294Z",
+     "iopub.status.busy": "2024-06-15T10:22:28.735943Z",
+     "iopub.status.idle": "2024-06-15T10:22:28.739776Z",
+     "shell.execute_reply": "2024-06-15T10:22:28.739146Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6ce1cc6840>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f0e0c62eac0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4865400",
+   "id": "9a18201a",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f07ae841",
+   "id": "20aa3ecc",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f3cc9c",
+   "id": "ccabf799",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d9eeb0b",
+   "id": "76a056d2",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "68186ee1",
+   "id": "ed1c2544",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:31.745800Z",
-     "iopub.status.busy": "2024-06-13T15:26:31.745480Z",
-     "iopub.status.idle": "2024-06-13T15:26:31.748795Z",
-     "shell.execute_reply": "2024-06-13T15:26:31.748126Z"
+     "iopub.execute_input": "2024-06-15T10:22:28.742253Z",
+     "iopub.status.busy": "2024-06-15T10:22:28.741897Z",
+     "iopub.status.idle": "2024-06-15T10:22:28.745130Z",
+     "shell.execute_reply": "2024-06-15T10:22:28.744430Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3c20b640",
+   "id": "a322ee74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:26:31.751105Z",
-     "iopub.status.busy": "2024-06-13T15:26:31.750613Z",
-     "iopub.status.idle": "2024-06-13T15:26:32.819505Z",
-     "shell.execute_reply": "2024-06-13T15:26:32.818901Z"
+     "iopub.execute_input": "2024-06-15T10:22:28.747428Z",
+     "iopub.status.busy": "2024-06-15T10:22:28.747058Z",
+     "iopub.status.idle": "2024-06-15T10:22:29.817054Z",
+     "shell.execute_reply": "2024-06-15T10:22:29.816421Z"
     }
    },
    "outputs": [
