--- a/tutorials/la_lindblad.ipynb
+++ b/tutorials/la_lindblad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5f7af501",
+   "id": "c5b69a04",
    "metadata": {},
    "source": [
     "# Dissipation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f60ea926",
+   "id": "3adf83be",
    "metadata": {},
    "source": [
     "GRANAD supports two dissipation models: A phenomenological dissipator, given by"
@@ -18,15 +18,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1186d4d",
+   "id": "3cd9c9b9",
    "metadata": {},
    "source": [
-    "$$\\mathcal{D}[\\rho - \\rho_0] = \\frac{-1}{\\tau} (\\rho - \\rho_0)$$,"
+    "$$\\mathcal{D}[\\rho - \\rho_0] = \\frac{-1}{\\tau} (\\rho - \\rho_0)$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b906570e",
+   "id": "f07977b1",
    "metadata": {},
    "source": [
     "where $\\rho_0$ is the equilibrium density matrix and $1 / \\tau$ a phenomenological relaxation rate."
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dde50f8",
+   "id": "f639cda7",
    "metadata": {},
    "source": [
     "To model dissipation in greater depth, GRANAD makes available also a Lindblad dissipation model. The mathematical details are laid out in [Pelc et al., 2024](https://link.aps.org/doi/10.1103/PhysRevA.109.022237) and revolve around the following equation"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "162891ea",
+   "id": "61582a36",
    "metadata": {},
    "source": [
     "$$\\gamma_{ij}(t) = \\gamma_{ij} \\cdot f(\\rho(t))$$"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f83dc01",
+   "id": "ce883753",
    "metadata": {},
    "source": [
     "where $\\gamma_{ij}$ is the transition rate from state i to state j and $f$ is a relaxation functional to counteract problems related to the Pauli principle breaking that might occur in the single-particle model.\n",
@@ -59,15 +59,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af490ec9",
+   "id": "a37a6890",
    "metadata": {},
    "source": [
-    "$$f(x) = \\frac{1}{1 + e^{\\beta \\cdot(2.0 - x)}$$,"
+    "$$f(x) = \\frac{1}{1 + e^{\\beta \\cdot(2 - x)}$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d8082678",
+   "id": "0b781b01",
    "metadata": {},
    "source": [
     "where x is the occupation and $\\beta$ a temperature-like control parameter to mimick a smooth Heaviside function, defaulting to 1e-6."
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37bdaf1f",
+   "id": "3660ff29",
    "metadata": {},
    "source": [
     "## Lindblad vs Phenomenological Relaxation dynamics of the Metallic Chain"
@@ -83,22 +83,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d4c20dc",
+   "id": "b624cb1d",
    "metadata": {},
    "source": [
-    "In the following, we will consider a metallic chain with a uniform transition rate, such that of $\\gamma_{ij} = \\gamma$ for all $i \\gt j$. We consider an initially excited state of one electron in the HOMO-LUM0+1 transition."
+    "In the following, we will consider a metallic chain with a uniform transition rate, such that of $\\gamma_{ij} = \\gamma$ for all $i \\gt j$. We consider an initially excited state of one electron in the HOMO-LUMO+1 transition."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "80e1347b",
+   "id": "f5318cbe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:28:13.762239Z",
-     "iopub.status.busy": "2024-06-13T15:28:13.761779Z",
-     "iopub.status.idle": "2024-06-13T15:28:18.484722Z",
-     "shell.execute_reply": "2024-06-13T15:28:18.484111Z"
+     "iopub.execute_input": "2024-06-15T10:24:07.947629Z",
+     "iopub.status.busy": "2024-06-15T10:24:07.947442Z",
+     "iopub.status.idle": "2024-06-15T10:24:12.540077Z",
+     "shell.execute_reply": "2024-06-15T10:24:12.539433Z"
     }
    },
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "457ef44d",
+   "id": "1fdefe1a",
    "metadata": {},
    "source": [
     "We can now build the matrix of transition rates with a uniform $\\gamma = 10$ as follows"
@@ -132,13 +132,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43cc686b",
+   "id": "bc57052e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:28:18.487457Z",
-     "iopub.status.busy": "2024-06-13T15:28:18.487056Z",
-     "iopub.status.idle": "2024-06-13T15:28:18.541424Z",
-     "shell.execute_reply": "2024-06-13T15:28:18.540767Z"
+     "iopub.execute_input": "2024-06-15T10:24:12.542489Z",
+     "iopub.status.busy": "2024-06-15T10:24:12.542286Z",
+     "iopub.status.idle": "2024-06-15T10:24:12.593374Z",
+     "shell.execute_reply": "2024-06-15T10:24:12.592762Z"
     }
    },
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95f48f3a",
+   "id": "2901a273",
    "metadata": {},
    "source": [
     "We can inspect the lumo-homo transition rate, for example, as"
@@ -159,13 +159,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0dd0ed6d",
+   "id": "d971d7fc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:28:18.544520Z",
-     "iopub.status.busy": "2024-06-13T15:28:18.544069Z",
-     "iopub.status.idle": "2024-06-13T15:28:18.572652Z",
-     "shell.execute_reply": "2024-06-13T15:28:18.572039Z"
+     "iopub.execute_input": "2024-06-15T10:24:12.596333Z",
+     "iopub.status.busy": "2024-06-15T10:24:12.595888Z",
+     "iopub.status.idle": "2024-06-15T10:24:12.623817Z",
+     "shell.execute_reply": "2024-06-15T10:24:12.623212Z"
     }
    },
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64fe5aba",
+   "id": "242de9cc",
    "metadata": {},
    "source": [
     "GRANAD dispatches the non-Hermitian functional depending on the `relaxation_rate` input type. If you pass a float, GRANAD uses the decoherence approximation. If you pass an array, it uses the Lindblad dissipator with a (smooth approximation of) the Heaviside function as the saturation functional. Modifications of the relaxation functional are discussed below."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "156d068b",
+   "id": "c275c38e",
    "metadata": {},
    "source": [
     "We now integrate the master equation. "
@@ -200,13 +200,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a5acd45b",
+   "id": "4b540610",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:28:18.575415Z",
-     "iopub.status.busy": "2024-06-13T15:28:18.574912Z",
-     "iopub.status.idle": "2024-06-13T15:28:20.011661Z",
-     "shell.execute_reply": "2024-06-13T15:28:20.011114Z"
+     "iopub.execute_input": "2024-06-15T10:24:12.626379Z",
+     "iopub.status.busy": "2024-06-15T10:24:12.625946Z",
+     "iopub.status.idle": "2024-06-15T10:24:14.039126Z",
+     "shell.execute_reply": "2024-06-15T10:24:14.038484Z"
     }
    },
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91777c21",
+   "id": "237b4bbb",
    "metadata": {},
    "source": [
     "We plot the changes in single-particle energy occupations as a function of time by defining the `plot_labels` argument as the energies"
@@ -244,13 +244,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fea8b093",
+   "id": "d6669581",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:28:20.014135Z",
-     "iopub.status.busy": "2024-06-13T15:28:20.013759Z",
-     "iopub.status.idle": "2024-06-13T15:28:20.455498Z",
-     "shell.execute_reply": "2024-06-13T15:28:20.454858Z"
+     "iopub.execute_input": "2024-06-15T10:24:14.041717Z",
+     "iopub.status.busy": "2024-06-15T10:24:14.041351Z",
+     "iopub.status.idle": "2024-06-15T10:24:14.474183Z",
+     "shell.execute_reply": "2024-06-15T10:24:14.473593Z"
     }
    },
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "011dcb62",
+   "id": "7f448a7f",
    "metadata": {},
    "source": [
     "A comparison to to the phenomenological approach can be obtained by"
@@ -281,13 +281,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "234bc371",
+   "id": "b56a5f42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:28:20.458009Z",
-     "iopub.status.busy": "2024-06-13T15:28:20.457636Z",
-     "iopub.status.idle": "2024-06-13T15:28:21.459548Z",
-     "shell.execute_reply": "2024-06-13T15:28:21.459018Z"
+     "iopub.execute_input": "2024-06-15T10:24:14.476547Z",
+     "iopub.status.busy": "2024-06-15T10:24:14.476350Z",
+     "iopub.status.idle": "2024-06-15T10:24:15.476960Z",
+     "shell.execute_reply": "2024-06-15T10:24:15.476422Z"
     }
    },
    "outputs": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "327eae40",
+   "id": "9a965e21",
    "metadata": {},
    "source": [
     "By comparing the two plots above, we observe a set of qualitative differences, discussed in greater detail in the [corresponding paper](https://link.aps.org/doi/10.1103/PhysRevA.109.022237)."
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8941b14d",
+   "id": "93aedc89",
    "metadata": {},
    "source": [
     "GRANAD imposes a degeneracy tolerance on the states. This means that all states separated by less than a numerical threshold are considered degenerate. The threshold is specified as variable `flake.params.eps`."
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418e30db",
+   "id": "f6494e8b",
    "metadata": {},
    "source": [
     "## Modifying the saturation functional"
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa6a9d3",
+   "id": "e9431bf6",
    "metadata": {},
    "source": [
     "The saturation functional can be customized by defining a saturation function and modifying the dissipator dict (for more information, please consult the tutorial on custom time evolution)."
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e8ad2e",
+   "id": "a3e04e97",
    "metadata": {},
    "source": [
     "1. initialize a dissipator with your custom relaxation functional\n",
@@ -368,30 +368,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f1f033",
+   "id": "007b5d5f",
    "metadata": {},
    "source": [
-    "To illustrate the necessity of introducing a saturation functional, we consider the case where no saturation is applied, i.e."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "43490481",
-   "metadata": {},
-   "source": [
-    "$$f(x) = 1$$"
+    "To illustrate the necessity of introducing a saturation functional, we consider the case where no saturation is applied, i.e. $f(x) = 1$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5655a070",
+   "id": "66e58f52",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:28:21.462221Z",
-     "iopub.status.busy": "2024-06-13T15:28:21.461799Z",
-     "iopub.status.idle": "2024-06-13T15:28:23.454364Z",
-     "shell.execute_reply": "2024-06-13T15:28:23.453733Z"
+     "iopub.execute_input": "2024-06-15T10:24:15.479568Z",
+     "iopub.status.busy": "2024-06-15T10:24:15.479172Z",
+     "iopub.status.idle": "2024-06-15T10:24:17.424224Z",
+     "shell.execute_reply": "2024-06-15T10:24:17.423592Z"
     }
    },
    "outputs": [
@@ -438,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "915a6ae4",
+   "id": "6b05a99e",
    "metadata": {},
    "source": [
     "We observe an almost complete collapse into the single-particle ground state, which can be revealed to be an Coulomb interaction effect."
@@ -447,13 +439,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bceb1f7d",
+   "id": "e2f7562e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:28:23.457007Z",
-     "iopub.status.busy": "2024-06-13T15:28:23.456616Z",
-     "iopub.status.idle": "2024-06-13T15:28:24.501079Z",
-     "shell.execute_reply": "2024-06-13T15:28:24.500451Z"
+     "iopub.execute_input": "2024-06-15T10:24:17.426724Z",
+     "iopub.status.busy": "2024-06-15T10:24:17.426345Z",
+     "iopub.status.idle": "2024-06-15T10:24:18.455338Z",
+     "shell.execute_reply": "2024-06-15T10:24:18.454725Z"
     }
    },
    "outputs": [
@@ -495,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3274c74f",
+   "id": "81c12585",
    "metadata": {},
    "source": [
     "## Wigner-Weisskopf transition rates"
@@ -503,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6df53923",
+   "id": "9ee0fa08",
    "metadata": {},
    "source": [
     "GRANAD offers the single-particle Wigner-Weisskopf transition rates directly in a matrix form "
@@ -512,13 +504,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2b78386d",
+   "id": "d55945f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T15:28:24.503686Z",
-     "iopub.status.busy": "2024-06-13T15:28:24.503304Z",
-     "iopub.status.idle": "2024-06-13T15:28:24.844189Z",
-     "shell.execute_reply": "2024-06-13T15:28:24.843511Z"
+     "iopub.execute_input": "2024-06-15T10:24:18.457882Z",
+     "iopub.status.busy": "2024-06-15T10:24:18.457469Z",
+     "iopub.status.idle": "2024-06-15T10:24:18.732743Z",
+     "shell.execute_reply": "2024-06-15T10:24:18.732164Z"
     }
    },
    "outputs": [
